--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <h2>Витрати клубу «Сірко»</h2>
     </header>
 
-    <div id="g_id_onload"
+    <div id="489497462381-t1ve6ae6jlmg9jm83lkguv5t0l962urc.apps.googleusercontent.com"
       data-client_id="YOUR_GOOGLE_CLIENT_ID"
       data-callback="handleCredentialResponse"
       data-auto_prompt="false">
