fixup! Update index.html

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       <h2>Витрати клубу «Сірко»</h2>
     </header>
 
-    <div id="489497462381-t1ve6ae6jlmg9jm83lkguv5t0l962urc.apps.googleusercontent.com"
-      data-client_id="YOUR_GOOGLE_CLIENT_ID"
+    <div id="g_id_onload"
+      data-client_id="489497462381-t1ve6ae6jlmg9jm83lkguv5t0l962urc.apps.googleusercontent.com"
       data-callback="handleCredentialResponse"
       data-auto_prompt="false">
     </div>
