--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
   <meta name="theme-color" content="#43766c" />
   <link rel="icon" href="logo.png" />
   <link rel="apple-touch-icon" href="logo.png" />
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script src="https://accounts.google.com/gsi/client" async defer>
+    const form = document.getElementById('expenseForm');
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwASi1sLeKl6kgoV0KyRe44YiXWz38JMnhTrpO9H_aDLQLWflj2D0Blw6StR4ocBw-T/exec';
+
+    form.addEventListener('submit', function (e) {
+      e.preventDefault();
+      const data = new FormData(form);
+      fetch(scriptURL, {
+        method: 'POST',
+        body: data
+      })
+      .then(() => {
+        alert("✅ Дані успішно надіслані!");
+        form.reset();
+      })
+      .catch(error => {
+        alert("❌ Помилка надсилання!");
+        console.error("Помилка:", error);
+      });
+    });
+
+  </script>
   <style>
     :root {
       --primary: #43766c;
@@ -139,6 +160,27 @@
           '⛔ Доступ дозволено лише для користувачів @sirko.club';
       }
     }
+
+    const form = document.getElementById('expenseForm');
+    const scriptURL = 'https://script.google.com/a/macros/sirko.club/s/AKfycbxwbU9_fjGnL2M_K1z8ona_CaBaUepWVXDQWTLwbAsboyzAFkB544M4V_RM4WAJihDb/exec';
+
+    form.addEventListener('submit', function (e) {
+      e.preventDefault();
+      const data = new FormData(form);
+      fetch(scriptURL, {
+        method: 'POST',
+        body: data
+      })
+      .then(() => {
+        alert("✅ Дані успішно надіслані!");
+        form.reset();
+      })
+      .catch(error => {
+        alert("❌ Помилка надсилання!");
+        console.error("Помилка:", error);
+      });
+    });
+
   </script>
 </body>
 </html>
