fixup! Update index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="apple-touch-icon" href="logo.png" />
   <script src="https://accounts.google.com/gsi/client" async defer>
     const form = document.getElementById('expenseForm');
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbwASi1sLeKl6kgoV0KyRe44YiXWz38JMnhTrpO9H_aDLQLWflj2D0Blw6StR4ocBw-T/exec';
+    const scriptURL = 'https://script.google.com/a/macros/sirko.club/s/AKfycbxwbU9_fjGnL2M_K1z8ona_CaBaUepWVXDQWTLwbAsboyzAFkB544M4V_RM4WAJihDb/exec';
 
     form.addEventListener('submit', function (e) {
       e.preventDefault();
