--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="apple-touch-icon" href="logo.png" />
   <script src="https://accounts.google.com/gsi/client" async defer>
     const form = document.getElementById('expenseForm');
-    const scriptURL = 'https://script.google.com/a/macros/sirko.club/s/AKfycbxwbU9_fjGnL2M_K1z8ona_CaBaUepWVXDQWTLwbAsboyzAFkB544M4V_RM4WAJihDb/exec';
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwk6uwFQBPklY3ISA3FuH60uC0In9Og0b68JgdKFY_FfPWFU7cphGKvEQjUFNnE5aZA/exec';
 
     form.addEventListener('submit', function (e) {
       e.preventDefault();
@@ -162,7 +162,7 @@
     }
 
     const form = document.getElementById('expenseForm');
-    const scriptURL = 'https://script.google.com/a/macros/sirko.club/s/AKfycbxwbU9_fjGnL2M_K1z8ona_CaBaUepWVXDQWTLwbAsboyzAFkB544M4V_RM4WAJihDb/exec';
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwk6uwFQBPklY3ISA3FuH60uC0In9Og0b68JgdKFY_FfPWFU7cphGKvEQjUFNnE5aZA/exec';
 
     form.addEventListener('submit', function (e) {
       e.preventDefault();
