--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -9,28 +8,7 @@
   <meta name="theme-color" content="#43766c" />
   <link rel="icon" href="logo.png" />
   <link rel="apple-touch-icon" href="logo.png" />
-  <script src="https://accounts.google.com/gsi/client" async defer>
-    const form = document.getElementById('expenseForm');
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbywW3i41CLqCR7UMlKKts-_Fxe2hlhGFvAOykVZNsUxrbWanBBcJYI35NiVxp5FAppS/exec';
-
-    form.addEventListener('submit', function (e) {
-      e.preventDefault();
-      const data = new FormData(form);
-      fetch(scriptURL, {
-        method: 'POST',
-        body: data
-      })
-      .then(() => {
-        alert("✅ Дані успішно надіслані!");
-        form.reset();
-      })
-      .catch(error => {
-        alert("❌ Помилка надсилання!");
-        console.error("Помилка:", error);
-      });
-    });
-
-  </script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <style>
     :root {
       --primary: #43766c;
@@ -93,6 +71,9 @@
   </style>
 </head>
 <body>
+  <div id="logoWrapper" style="text-align: center; margin-top: 1rem;">
+    <img src="logo.png" alt="SIRKO" style="width: 96px; height: 96px; border-radius: 16px;">
+  </div>
   <h2>Витрати клубу «Сірко»</h2>
 
   <div id="g_id_onload"
@@ -129,7 +110,7 @@
       <option>📊 Непередбачувані витрати</option>
     </select>
     <label for="payer">👤 Ким оплачено</label>
-    <input type="email" name="payer" id="payer" required />
+    <input type="email" name="payer" id="payer" placeholder="вкажіть, будь ласка, корпоративну пошту @sirko.club" required />
     <label for="amount">💰 Сума</label>
     <input type="number" name="amount" id="amount" step="0.01" min="0" required />
     <label for="date">📆 Дата</label>
@@ -180,7 +161,6 @@
         console.error("Помилка:", error);
       });
     });
-
   </script>
 </body>
 </html>
