--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           notes: form.notes.value
         };
 
-        fetch('https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbyXr__EZOUK3LGBlSjSSml5pHjsz5bChhiDmYOLhivCcdTSQIsounJgfIm6k6qUQw3k/exec/exec', {
+        fetch('https://script.google.com/macros/s/AKfycbyXr__EZOUK3LGBlSjSSml5pHjsz5bChhiDmYOLhivCcdTSQIsounJgfIm6k6qUQw3k/exec', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
