--- a/index.html
+++ b/index.html
@@ -158,45 +158,36 @@
       if (email.endsWith('@sirko.club')) {
         document.getElementById('expenseForm').style.display = 'block';
         document.querySelector('.g_id_signin').style.display = 'none';
-        document.getElementById('unauthorized').style.display = 'none';
       } else {
-        document.getElementById('expenseForm').style.display = 'none';
-        document.querySelector('.g_id_signin').style.display = 'none';
-        document.getElementById('unauthorized').textContent =
-          '⛔ Доступ дозволено лише для користувачів @sirko.club';
-        document.getElementById('unauthorized').style.display = 'block';
+        document.getElementById('unauthorized').textContent = '⛔ Доступ дозволено лише для користувачів @sirko.club';
       }
     }
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const form = document.getElementById('expenseForm');
+    document.getElementById('expenseForm').addEventListener('submit', function (e) {
+      e.preventDefault();
+      const form = e.target;
+      const data = {
+        info: form.info.value,
+        category: form.category.value,
+        payer: form.payer.value,
+        amount: form.amount.value,
+        date: form.date.value,
+        notes: form.notes.value
+      };
 
-      form.addEventListener('submit', function (e) {
-        e.preventDefault();
-        const data = {
-          info: form.info.value,
-          category: form.category.value,
-          payer: form.payer.value,
-          amount: form.amount.value,
-          date: form.date.value,
-          notes: form.notes.value
-        };
-
-        fetch('https://script.google.com/macros/s/AKfycbxwbU9_fjGnL2M_K1z8ona_CaBaUepWVXDQWTLwbAsboyzAFkB544M4V_RM4WAJihDb/exec', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify(data),
-        })
-          .then(res => {
-            if (!res.ok) throw new Error("Network error");
-            showToast("✅ Дані успішно надіслані!");
-            form.reset();
-          })
-          .catch(() => {
-            showToast("⚠️ Помилка! Але можливо, дані збережено.");
-          });
+      fetch('https://script.google.com/macros/s/AKfycbyYE_y-FvrSWTpWo398oOCPy-tN_khLLE3lRdjppHIBNMIhtpo_qvbuMYUcl_suk_Mx/exec', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(data)
+      })
+      .then(() => {
+        showToast("✅ Дані успішно надіслані!");
+        form.reset();
+      })
+      .catch(() => {
+        showToast("⚠️ Помилка! Але, можливо, дані збережено.");
       });
     });
   </script>
