--- a/index.html
+++ b/index.html
@@ -1,195 +1,16 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Витрати клубу «Сірко»</title>
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#43766c" />
-  <link rel="icon" href="logo.png" />
-  <link rel="apple-touch-icon" href="logo.png" />
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-  <style>
-    :root {
-      --primary: #43766c;
-      --accent: #ffb84c;
-      --bg: #fefbf6;
-      --text: #222;
-      --radius: 14px;
-      --shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
-      --font: 'Inter', 'Segoe UI', system-ui, sans-serif;
-    }
-    body {
-      font-family: var(--font);
-      margin: 0;
-      padding: 2rem;
-      background: var(--bg);
-      color: var(--text);
-    }
-    h2 {
-      text-align: center;
-      color: var(--primary);
-    }
-    form {
-      display: none;
-      max-width: 600px;
-      margin: auto;
-      background: white;
-      padding: 2rem;
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-    }
-    label {
-      display: block;
-      margin-top: 1rem;
-    }
-    input, select, textarea {
-      width: 100%;
-      padding: 0.8rem;
-      margin-top: 0.3rem;
-      border-radius: var(--radius);
-      border: 1px solid #ccc;
-      font-size: 1rem;
-    }
-    button {
-      margin-top: 1.5rem;
-      width: 100%;
-      padding: 1rem;
-      font-size: 1.1rem;
-      background: linear-gradient(to right, var(--primary), var(--accent));
-      color: white;
-      border: none;
-      border-radius: var(--radius);
-      cursor: pointer;
-    }
-    #unauthorized {
-      text-align: center;
-      color: red;
-      font-weight: bold;
-      margin-top: 2rem;
-    }
-    .toast {
-      position: fixed;
-      bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #222;
-      color: #fff;
-      padding: 1rem 1.5rem;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      z-index: 9999;
-      animation: fadeInOut 4s ease-in-out forwards;
-    }
-    @keyframes fadeInOut {
-      0% { opacity: 0; transform: translateY(20px) translateX(-50%); }
-      10% { opacity: 1; transform: translateY(0) translateX(-50%); }
-      90% { opacity: 1; }
-      100% { opacity: 0; transform: translateY(-20px) translateX(-50%); }
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Зачекайте…</title>
+  <meta name="robots" content="noindex" />
+  <script>
+    setTimeout(() => {
+      window.location.href = "https://script.google.com/a/macros/sirko.club/s/AKfycbzrRawXIFJwwhyWNhHLqs5BL0Xx3aQNCmq2q9GynGq9jGbF8bHUSrlLxVrytkePXRUj/exec";
+    }, 100); // 100 мс затримка
+  </script>
 </head>
 <body>
-  <div style="text-align: center; margin-top: 1rem;">
-    <img src="logo.png" alt="SIRKO" style="width: 96px; height: 96px; border-radius: 16px;">
-  </div>
-  <h2>Витрати клубу «Сірко»</h2>
-
-  <div id="g_id_onload"
-    data-client_id="489497462381-t1ve6ae6jlmg9jm83lkguv5t0l962urc.apps.googleusercontent.com"
-    data-callback="handleCredentialResponse"
-    data-auto_prompt="false">
-  </div>
-  <div class="g_id_signin"
-    data-type="standard"
-    data-size="large"
-    data-theme="outline"
-    data-text="sign_in_with"
-    data-shape="rectangular"
-    data-logo_alignment="left">
-  </div>
-
-  <form id="expenseForm">
-    <label for="info">📄 Що було оплачено?</label>
-    <input type="text" name="info" id="info" required />
-    <label for="category">🗂 Категорія</label>
-    <select name="category" id="category" required>
-      <option value="">Оберіть категорію</option>
-      <option>🏠 Оренда та інфраструктура</option>
-      <option>🔧 Тренери та персонал</option>
-      <option>🦴 Харчування, ласощі, мотивація</option>
-      <option>💼 Адміністративні витрати</option>
-      <option>📢 Реклама та маркетинг</option>
-      <option>🧹 Чистота та гігієна</option>
-      <option>🚗 Транспортні витрати</option>
-      <option>🎓 Освіта і сертифікація</option>
-      <option>📦 Обладнання та ремонт</option>
-      <option>🐶 Витрати на собак клубу</option>
-      <option>📱 Онлайн покупки і підписки</option>
-      <option>📊 Непередбачувані витрати</option>
-    </select>
-    <label for="payer">👤 Ким оплачено</label>
-    <input type="email" name="payer" id="payer" placeholder="@sirko.club" required />
-    <label for="amount">💰 Сума</label>
-    <input type="number" name="amount" id="amount" step="0.01" min="0" required />
-    <label for="date">📆 Дата</label>
-    <input type="date" name="date" id="date" required />
-    <label for="notes">📝 Коментар</label>
-    <textarea name="notes" id="notes"></textarea>
-    <button type="submit">✅ Надіслати витрату</button>
-  </form>
-
-  <div id="unauthorized"></div>
-
-  <script>
-    function showToast(message) {
-      const toast = document.createElement('div');
-      toast.className = 'toast';
-      toast.textContent = message;
-      document.body.appendChild(toast);
-      setTimeout(() => toast.remove(), 4000);
-    }
-
-    function handleCredentialResponse(response) {
-      const idToken = response.credential;
-      const payload = JSON.parse(atob(idToken.split('.')[1].replace(/-/g, '+').replace(/_/g, '/')));
-      const email = payload.email;
-
-      if (email.endsWith('@sirko.club')) {
-        document.getElementById('expenseForm').style.display = 'block';
-        document.querySelector('.g_id_signin').style.display = 'none';
-      } else {
-        document.getElementById('unauthorized').textContent = '⛔ Доступ дозволено лише для користувачів @sirko.club';
-      }
-    }
-
-    document.getElementById('expenseForm').addEventListener('submit', function (e) {
-      e.preventDefault();
-      const form = e.target;
-      const data = {
-        info: form.info.value,
-        category: form.category.value,
-        payer: form.payer.value,
-        amount: form.amount.value,
-        date: form.date.value,
-        notes: form.notes.value
-      };
-
-      fetch('https://script.google.com/macros/s/AKfycbyYE_y-FvrSWTpWo398oOCPy-tN_khLLE3lRdjppHIBNMIhtpo_qvbuMYUcl_suk_Mx/exec', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(data)
-      })
-      .then(() => {
-        showToast("✅ Дані успішно надіслані!");
-        form.reset();
-      })
-      .catch(() => {
-        showToast("⚠️ Помилка! Але, можливо, дані збережено.");
-      });
-    });
-  </script>
+  <p>Перенаправлення… Якщо воно не відбулося автоматично, <a href="https://script.google.com/a/macros/sirko.club/s/AKfycbzrRawXIFJwwhyWNhHLqs5BL0Xx3aQNCmq2q9GynGq9jGbF8bHUSrlLxVrytkePXRUj/exec">натисніть тут</a>.</p>
 </body>
 </html>
