--- a/index.html
+++ b/index.html
@@ -3,14 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <title>Зачекайте…</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex" />
   <script>
     setTimeout(() => {
       window.location.href = "https://script.google.com/a/macros/sirko.club/s/AKfycbzrRawXIFJwwhyWNhHLqs5BL0Xx3aQNCmq2q9GynGq9jGbF8bHUSrlLxVrytkePXRUj/exec";
-    }, 100); // 100 мс затримка
+    }, 150); // затримка для плавного переходу
   </script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      color: #333;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+    .box {
+      background: white;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.1);
+    }
+    a {
+      color: #43766c;
+    }
+  </style>
 </head>
 <body>
-  <p>Перенаправлення… Якщо воно не відбулося автоматично, <a href="https://script.google.com/a/macros/sirko.club/s/AKfycbzrRawXIFJwwhyWNhHLqs5BL0Xx3aQNCmq2q9GynGq9jGbF8bHUSrlLxVrytkePXRUj/exec">натисніть тут</a>.</p>
+  <div class="box">
+    <p>⏳ Перенаправляємо на додаток обліку витрат…</p>
+    <p>Якщо редірект не спрацює, <a href="https://script.google.com/a/macros/sirko.club/s/AKfycbzrRawXIFJwwhyWNhHLqs5BL0Xx3aQNCmq2q9GynGq9jGbF8bHUSrlLxVrytkePXRUj/exec">натисніть тут</a>.</p>
+  </div>
 </body>
 </html>
