--- a/index.html
+++ b/index.html
@@ -2,19 +2,50 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Зачекайте…</title>
+  <title>Вхід до обліку витрат</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="noindex" />
+  <meta name="robots" content="noindex">
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script>
+    const CLIENT_ID = "489497462381-fcmpdnjnj68j3iu7h6m8p9o2lp878d67.apps.googleusercontent.com";
+
+    function handleCredentialResponse(response) {
+      const payload = JSON.parse(atob(response.credential.split('.')[1]));
+      const email = payload.email;
+
+      if (email.endsWith("@sirko.club")) {
+        window.location.href = "https://script.google.com/a/macros/sirko.club/s/AKfycbzOz_JIE-r6h1hf3RNEb_o0aPFOaiVISN95rcHKgODNyhOnJjegCeeNVqUz0k4FANbu/exec";
+      } else {
+        document.getElementById("redirect-text").textContent =
+          "⛔ Доступ дозволено лише для користувачів @sirko.club";
+      }
+    }
+
+    window.onload = function () {
+      google.accounts.id.initialize({
+        client_id: CLIENT_ID,
+        callback: handleCredentialResponse,
+        auto_select: false
+      });
+      google.accounts.id.prompt();
+    };
+
+    // Резервний редірект
+    setTimeout(() => {
+      window.location.href = "https://script.google.com/a/macros/sirko.club/s/AKfycbzOz_JIE-r6h1hf3RNEb_o0aPFOaiVISN95rcHKgODNyhOnJjegCeeNVqUz0k4FANbu/exec";
+    }, 5000);
+  </script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      background: #fefbf6;
       color: #333;
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
       text-align: center;
+      margin: 0;
     }
     .box {
       background: white;
@@ -26,16 +57,10 @@
       color: #43766c;
     }
   </style>
-  <script>
-    setTimeout(() => {
-      window.location.href = "https://script.google.com/a/macros/sirko.club/s/AKfycbzOz_JIE-r6h1hf3RNEb_o0aPFOaiVISN95rcHKgODNyhOnJjegCeeNVqUz0k4FANbu/exec";
-    }, 3000);
-  </script>
 </head>
 <body>
   <div class="box">
-    <p>⏳ Перенаправляємо на додаток обліку витрат…</p>
-    <p>Якщо редірект не спрацює, <a href="https://script.google.com/a/macros/sirko.club/s/AKfycbzOz_JIE-r6h1hf3RNEb_o0aPFOaiVISN95rcHKgODNyhOnJjegCeeNVqUz0k4FANbu/exec">натисніть тут</a>.</p>
+    <p id="redirect-text">⏳ Авторизуємо… Якщо нічого не відбувається, <a href="https://script.google.com/a/macros/sirko.club/s/AKfycbzOz_JIE-r6h1hf3RNEb_o0aPFOaiVISN95rcHKgODNyhOnJjegCeeNVqUz0k4FANbu/exec">натисніть тут</a>.</p>
   </div>
 </body>
 </html>
