--- a/index.html
+++ b/index.html
@@ -2,165 +2,138 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex" />
-  <title>Вхід до обліку витрат — Sirko</title>
+  <title>Sirko Club — Облік витрат</title>
   <link rel="icon" href="logo.png" />
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <style>
-    /* Reset для уніфікації стилів */
+    /* Reset */
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
+    html, body { height: 100%; width: 100%; }
 
     :root {
-      --bg: #fefbf6;
-      --card: #ffffff;
-      --text: #222222;
-      --accent: #43766c;
-      --highlight: #ffb84c;
-      --shadow: 0 4px 12px rgba(0,0,0,0.1);
+      --bg-dark: #0f243d;
+      --bg-lite: #fefbf6;
+      --accent: #ff7126;
+      --accent-dark: #d85e1e;
+      --text-light: #fefbf6;
+      --text-dark: #222222;
       --radius: 12px;
-      --font: 'Inter', 'Segoe UI', system-ui, sans-serif;
-      --redirect-duration: 4s;
+      --shadow: 0 4px 16px rgba(0,0,0,0.2);
+      --font-sans: 'Inter', 'Segoe UI', system-ui, sans-serif;
+      --animation-speed: 3s;
     }
 
-    html, body {
-      height: 100%; width: 100%;
-      font-family: var(--font);
-      background: var(--bg);
+    body {
+      font-family: var(--font-sans);
+      background: var(--bg-dark);
+      color: var(--text-light);
       display: flex;
       align-items: center;
       justify-content: center;
-      text-align: center;
-      color: var(--text);
+      overflow: hidden;
+    }
+
+    /* Animated paw-print particles */
+    .paw {
+      position: absolute;
+      background-image: url('logo.png'); /* use logo as stylized paw */
+      background-size: contain;
+      background-repeat: no-repeat;
+      opacity: 0.1;
+      animation: float var(--animation-speed) linear infinite;
+    }
+    @keyframes float {
+      0% { transform: translateY(100vh) scale(0.3) rotate(0deg); opacity: 0; }
+      50% { opacity: 0.1; }
+      100% { transform: translateY(-50vh) scale(0.6) rotate(360deg); opacity: 0; }
     }
 
     .container {
-      background: var(--card);
-      padding: 2rem;
+      position: relative;
+      z-index: 1;
+      background: var(--bg-lite);
+      padding: 2.5rem;
       border-radius: var(--radius);
       box-shadow: var(--shadow);
+      text-align: center;
       max-width: 360px;
       width: 90%;
-      position: relative;
-      overflow: hidden;
     }
 
     .logo {
       width: 80px;
       height: 80px;
-      object-fit: contain;
       margin: 0 auto 1rem;
-      animation: scaleIn 0.8s ease-out both;
+      animation: popIn 0.8s ease-out both;
+    }
+    @keyframes popIn {
+      0% { transform: scale(0); opacity: 0; }
+      100% { transform: scale(1); opacity: 1; }
     }
 
-    @keyframes scaleIn {
-      from { transform: scale(0); opacity: 0; }
-      to   { transform: scale(1); opacity: 1; }
+    h1 {
+      font-size: 1.5rem;
+      margin-bottom: 0.5rem;
+      color: var(--bg-dark);
     }
-
-    #redirect-text {
-      font-size: 1rem;
+    p {
+      color: var(--bg-dark);
       margin-bottom: 1.5rem;
-      opacity: 0;
-      animation: fadeIn 1s ease-out 0.5s forwards;
     }
 
-    @keyframes fadeIn {
-      to { opacity: 1; }
-    }
-
-    .spinner {
-      width: 48px;
-      height: 48px;
-      border: 5px solid rgba(67,118,108,0.2);
-      border-top-color: var(--highlight);
-      border-radius: 50%;
-      margin: 1rem auto;
-      animation: spin 1s linear infinite;
-    }
-
-    @keyframes spin {
-      to { transform: rotate(360deg); }
-    }
-
-    .progress-bar {
-      position: absolute;
-      bottom: 0; left: 0;
-      width: 100%; height: 4px;
-      background: rgba(67,118,108,0.2);
-    }
-
-    .progress-bar .fill {
-      width: 0%; height: 100%;
-      background: var(--highlight);
-      animation: fillProgress var(--redirect-duration) ease-in-out forwards;
-    }
-
-    @keyframes fillProgress {
-      100% { width: 100%; }
-    }
-
-    a {
-      color: var(--highlight);
+    .btn {
+      display: inline-block;
+      position: relative;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      font-weight: 600;
+      color: var(--text-light);
+      background: linear-gradient(45deg, var(--accent), var(--accent-dark));
+      border: none;
+      border-radius: var(--radius);
+      cursor: pointer;
+      overflow: hidden;
+      transition: transform 0.3s;
       text-decoration: none;
-      font-weight: 500;
     }
-
-    a:hover {
-      text-decoration: underline;
+    .btn::before {
+      content: '';
+      position: absolute;
+      top: 0; left: -100%;
+      width: 100%; height: 100%;
+      background: rgba(255,255,255,0.2);
+      transform: skewX(-25deg);
+      transition: all 0.5s;
+    }
+    .btn:hover {
+      transform: scale(1.05);
+    }
+    .btn:hover::before {
+      left: 200%;
     }
 
     @media (max-width: 400px) {
-      .container { padding: 1.5rem; }
-      #redirect-text { font-size: 0.9rem; }
-      .spinner { width: 36px; height: 36px; border-width: 4px; }
+      .container { padding: 2rem; }
+      h1 { font-size: 1.25rem; }
+      .btn { width: 100%; }
     }
   </style>
 </head>
 <body>
+  <!-- Paw particles -->
+  <div class="paw" style="width:60px; height:60px; left:10%; animation-delay:0s;"></div>
+  <div class="paw" style="width:40px; height:40px; left:80%; animation-delay:1s;"></div>
+  <div class="paw" style="width:50px; height:50px; left:30%; animation-delay:2s;"></div>
+  <div class="paw" style="width:70px; height:70px; left:50%; animation-delay:1.5s;"></div>
+
   <div class="container">
     <img src="logo.png" alt="Sirko Logo" class="logo" />
-    <p id="redirect-text">
-      ⏳ Авторизуємо… Якщо нічого не відбувається, 
-      <a href="https://script.google.com/a/macros/sirko.club/s/AKfycbx1_Tt8PDdcKSXYADq3UrYB7JwiaduXrCLpHIERpMuemH096eG0JfXzDOM4QgYa5bPv/exec">
-        натисніть тут
-      </a>.
-    </p>
-    <div class="spinner"></div>
-    <div class="progress-bar"><div class="fill"></div></div>
+    <h1>Ласкаво просимо в Sirko Club</h1>
+    <p>Натисніть кнопку нижче, щоб перейти до обліку витрат</p>
+    <a href="https://script.google.com/a/macros/sirko.club/s/AKfycbxTf_0HjyfZFF_Us-ldvmC2c4ylWcTPRkkEM11fHOPpxULandxpf72YDjHDmTKwjIxs/exec" class="btn">
+      Перейти до форми
+    </a>
   </div>
-
-  <script>
-    const CLIENT_ID = "489497462381-fcmpdnjnj68j3iu7h6m8p9o2lp878d67.apps.googleusercontent.com";
-    const TARGET_URL = "https://script.google.com/a/macros/sirko.club/s/AKfycbx1_Tt8PDdcKSXYADq3UrYB7JwiaduXrCLpHIERpMuemH096eG0JfXzDOM4QgYa5bPv/exec";
-
-    window.onload = () => {
-      google.accounts.id.initialize({
-        client_id: CLIENT_ID,
-        callback: handleCredentialResponse,
-        auto_select: false
-      });
-      google.accounts.id.prompt();
-
-      // Резервний редірект через час анімації
-      setTimeout(() => {
-        window.location.href = TARGET_URL;
-      }, 4000);
-    };
-
-    function handleCredentialResponse(response) {
-      const payload = JSON.parse(
-        atob(response.credential.split('.')[1].replace(/-/g, '+').replace(/_/g, '/'))
-      );
-      if (payload.email.endsWith("@sirko.club")) {
-        window.location.href = TARGET_URL;
-      } else {
-        document.getElementById('redirect-text').textContent =
-          '⛔ Доступ дозволено лише для користувачів @sirko.club';
-        document.querySelector('.spinner').style.display = 'none';
-        document.querySelector('.progress-bar').style.display = 'none';
-      }
-    }
-  </script>
 </body>
 </html>
