--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <meta name="robots" content="noindex" />
   <title>Sirko Club — Облік витрат</title>
   <link rel="icon" href="logo.png" />
   <style>
     /* Reset */
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
-    html, body { height: 100%; width: 100%; }
+    html, body { height: 100%; width: 100%; overflow: hidden; }
 
     :root {
       --bg-dark: #0f243d;
@@ -21,7 +21,8 @@
       --radius: 12px;
       --shadow: 0 4px 16px rgba(0,0,0,0.2);
       --font-sans: 'Inter', 'Segoe UI', system-ui, sans-serif;
-      --animation-speed: 3s;
+      --paw-count: 8;
+      --dog-count: 4;
     }
 
     body {
@@ -31,26 +32,42 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      overflow: hidden;
+      position: relative;
+      touch-action: none;
     }
 
-    /* Animated paw-print particles */
-    .paw {
+    /* Background paw prints */
+    .bg-paw, .bg-dog {
       position: absolute;
-      background-image: url('logo.png'); /* use logo as stylized paw */
-      background-size: contain;
-      background-repeat: no-repeat;
-      opacity: 0.1;
-      animation: float var(--animation-speed) linear infinite;
+      pointer-events: none;
+      user-select: none;
+      will-change: transform, opacity;
     }
-    @keyframes float {
-      0% { transform: translateY(100vh) scale(0.3) rotate(0deg); opacity: 0; }
-      50% { opacity: 0.1; }
-      100% { transform: translateY(-50vh) scale(0.6) rotate(360deg); opacity: 0; }
+    .bg-paw {
+      font-size: 2rem;
+      opacity: 0.2;
+      bottom: -10vh;
+      animation: paw-rise linear infinite;
+    }
+    @keyframes paw-rise {
+      0% { transform: translateY(0) scale(0.3); opacity: 0; }
+      10%, 90% { opacity: 0.2; }
+      100% { transform: translateY(-120vh) scale(0.3); opacity: 0; }
+    }
+
+    .bg-dog {
+      font-size: 3rem;
+      opacity: 0.15;
+      left: -10vw;
+      animation: dog-run linear infinite;
+    }
+    @keyframes dog-run {
+      0% { transform: translateX(0) scale(0.5); opacity: 0; }
+      10%, 90% { opacity: 0.15; }
+      100% { transform: translateX(120vw) scale(0.5); opacity: 0; }
     }
 
     .container {
-      position: relative;
       z-index: 1;
       background: var(--bg-lite);
       padding: 2.5rem;
@@ -68,18 +85,19 @@
       animation: popIn 0.8s ease-out both;
     }
     @keyframes popIn {
-      0% { transform: scale(0); opacity: 0; }
-      100% { transform: scale(1); opacity: 1; }
+      from { transform: scale(0); opacity: 0; }
+      to   { transform: scale(1); opacity: 1; }
     }
 
     h1 {
       font-size: 1.5rem;
       margin-bottom: 0.5rem;
-      color: var(--bg-dark);
+      color: var(--text-dark);
     }
     p {
-      color: var(--bg-dark);
+      color: var(--text-dark);
       margin-bottom: 1.5rem;
+      font-size: 1rem;
     }
 
     .btn {
@@ -114,6 +132,7 @@
     }
 
     @media (max-width: 400px) {
+      :root { --paw-count: 4; --dog-count: 2; }
       .container { padding: 2rem; }
       h1 { font-size: 1.25rem; }
       .btn { width: 100%; }
@@ -121,19 +140,45 @@
   </style>
 </head>
 <body>
-  <!-- Paw particles -->
-  <div class="paw" style="width:60px; height:60px; left:10%; animation-delay:0s;"></div>
-  <div class="paw" style="width:40px; height:40px; left:80%; animation-delay:1s;"></div>
-  <div class="paw" style="width:50px; height:50px; left:30%; animation-delay:2s;"></div>
-  <div class="paw" style="width:70px; height:70px; left:50%; animation-delay:1.5s;"></div>
-
   <div class="container">
     <img src="logo.png" alt="Sirko Logo" class="logo" />
     <h1>Ласкаво просимо в Sirko Club</h1>
-    <p>Натисніть кнопку нижче, щоб перейти до обліку витрат</p>
+    <p>Натисніть кнопку нижче, щоб перейти до обліку витрат.</p>
     <a href="https://script.google.com/a/macros/sirko.club/s/AKfycbxTf_0HjyfZFF_Us-ldvmC2c4ylWcTPRkkEM11fHOPpxULandxpf72YDjHDmTKwjIxs/exec" class="btn">
       Перейти до форми
     </a>
   </div>
+  <script>
+    // Генеруємо анімовані елементи
+    const body = document.body;
+    const pawCount = parseInt(getComputedStyle(document.documentElement).getPropertyValue('--paw-count'));
+    const dogCount = parseInt(getComputedStyle(document.documentElement).getPropertyValue('--dog-count'));
+
+    function random(min, max) { return Math.random() * (max - min) + min; }
+
+    // Paw prints
+    for (let i = 0; i < pawCount; i++) {
+      const paw = document.createElement('div');
+      paw.className = 'bg-paw';
+      paw.textContent = '🐾';
+      paw.style.left = random(0, 100) + 'vw';
+      const dur = random(6, 12);
+      paw.style.animationDuration = dur + 's';
+      paw.style.animationDelay = -random(0, dur) + 's';
+      paw.style.fontSize = random(1.5, 3) + 'rem';
+      body.appendChild(paw);
+    }
+    // Running dogs
+    for (let i = 0; i < dogCount; i++) {
+      const dog = document.createElement('div');
+      dog.className = 'bg-dog';
+      dog.textContent = '🐕';
+      dog.style.top = random(5, 85) + 'vh';
+      const dur = random(10, 18);
+      dog.style.animationDuration = dur + 's';
+      dog.style.animationDelay = -random(0, dur) + 's';
+      body.appendChild(dog);
+    }
+  </script>
 </body>
 </html>
