--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
       --shadow: 0 4px 16px rgba(0,0,0,0.2);
       --font-sans: 'Inter', 'Segoe UI', system-ui, sans-serif;
       --paw-count: 8;
-      --dog-count: 4;
+      --print-size-min: 2rem;
+      --print-size-max: 4rem;
+      --print-duration: 4s;
+      --transition-duration: 0.6s;
     }
 
     body {
@@ -36,35 +39,21 @@
       touch-action: none;
     }
 
-    /* Background paw prints */
-    .bg-paw, .bg-dog {
+    /* Paw print effect */
+    .paw-print {
       position: absolute;
       pointer-events: none;
       user-select: none;
-      will-change: transform, opacity;
-    }
-    .bg-paw {
-      font-size: 2rem;
-      opacity: 0.2;
-      bottom: -10vh;
-      animation: paw-rise linear infinite;
-    }
-    @keyframes paw-rise {
-      0% { transform: translateY(0) scale(0.3); opacity: 0; }
-      10%, 90% { opacity: 0.2; }
-      100% { transform: translateY(-120vh) scale(0.3); opacity: 0; }
+      color: var(--accent);
+      opacity: 0;
+      animation: print-appear var(--print-duration) ease forwards;
     }
 
-    .bg-dog {
-      font-size: 3rem;
-      opacity: 0.15;
-      left: -10vw;
-      animation: dog-run linear infinite;
-    }
-    @keyframes dog-run {
-      0% { transform: translateX(0) scale(0.5); opacity: 0; }
-      10%, 90% { opacity: 0.15; }
-      100% { transform: translateX(120vw) scale(0.5); opacity: 0; }
+    @keyframes print-appear {
+      0% { opacity: 0; transform: scale(0.5); }
+      10% { opacity: 0.6; transform: scale(1); }
+      70% { opacity: 0.6; }
+      100% { opacity: 0; transform: scale(0.5); }
     }
 
     .container {
@@ -76,6 +65,7 @@
       text-align: center;
       max-width: 360px;
       width: 90%;
+      transition: transform var(--transition-duration) ease, opacity var(--transition-duration) ease;
     }
 
     .logo {
@@ -102,7 +92,6 @@
 
     .btn {
       display: inline-block;
-      position: relative;
       padding: 0.75rem 1.5rem;
       font-size: 1rem;
       font-weight: 600;
@@ -111,28 +100,15 @@
       border: none;
       border-radius: var(--radius);
       cursor: pointer;
-      overflow: hidden;
-      transition: transform 0.3s;
       text-decoration: none;
-    }
-    .btn::before {
-      content: '';
-      position: absolute;
-      top: 0; left: -100%;
-      width: 100%; height: 100%;
-      background: rgba(255,255,255,0.2);
-      transform: skewX(-25deg);
-      transition: all 0.5s;
+      transition: background 0.3s;
     }
     .btn:hover {
-      transform: scale(1.05);
-    }
-    .btn:hover::before {
-      left: 200%;
+      background: linear-gradient(45deg, var(--accent-dark), var(--accent));
     }
 
     @media (max-width: 400px) {
-      :root { --paw-count: 4; --dog-count: 2; }
+      :root { --paw-count: 5; }
       .container { padding: 2rem; }
       h1 { font-size: 1.25rem; }
       .btn { width: 100%; }
@@ -140,45 +116,45 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="container" id="container">
     <img src="logo.png" alt="Sirko Logo" class="logo" />
     <h1>Ласкаво просимо в Sirko Club</h1>
     <p>Натисніть кнопку нижче, щоб перейти до обліку витрат.</p>
-    <a href="https://script.google.com/a/macros/sirko.club/s/AKfycbxTf_0HjyfZFF_Us-ldvmC2c4ylWcTPRkkEM11fHOPpxULandxpf72YDjHDmTKwjIxs/exec" class="btn">
+    <a href="#" id="go-button" class="btn">
       Перейти до форми
     </a>
   </div>
   <script>
-    // Генеруємо анімовані елементи
     const body = document.body;
-    const pawCount = parseInt(getComputedStyle(document.documentElement).getPropertyValue('--paw-count'));
-    const dogCount = parseInt(getComputedStyle(document.documentElement).getPropertyValue('--dog-count'));
+    const container = document.getElementById('container');
+    const button = document.getElementById('go-button');
+    const TARGET_URL = 'https://script.google.com/a/macros/sirko.club/s/AKfycbxTf_0HjyfZFF_Us-ldvmC2c4ylWcTPRkkEM11fHOPpxULandxpf72YDjHDmTKwjIxs/exec';
 
+    // Helper
     function random(min, max) { return Math.random() * (max - min) + min; }
 
-    // Paw prints
+    // Generate paw prints across screen
+    const pawCount = parseInt(getComputedStyle(document.documentElement).getPropertyValue('--paw-count'));
     for (let i = 0; i < pawCount; i++) {
-      const paw = document.createElement('div');
-      paw.className = 'bg-paw';
-      paw.textContent = '🐾';
-      paw.style.left = random(0, 100) + 'vw';
-      const dur = random(6, 12);
-      paw.style.animationDuration = dur + 's';
-      paw.style.animationDelay = -random(0, dur) + 's';
-      paw.style.fontSize = random(1.5, 3) + 'rem';
-      body.appendChild(paw);
+      const span = document.createElement('span');
+      span.className = 'paw-print';
+      span.textContent = '🐾';
+      span.style.left = random(5, 95) + 'vw';
+      span.style.top = random(5, 95) + 'vh';
+      const size = random(parseFloat(getComputedStyle(document.documentElement).getPropertyValue('--print-size-min')), parseFloat(getComputedStyle(document.documentElement).getPropertyValue('--print-size-max')));
+      span.style.fontSize = size + 'rem';
+      const duration = random(3, 6);
+      span.style.animationDuration = duration + 's';
+      setTimeout(() => { body.appendChild(span); }, random(0, 3000));
     }
-    // Running dogs
-    for (let i = 0; i < dogCount; i++) {
-      const dog = document.createElement('div');
-      dog.className = 'bg-dog';
-      dog.textContent = '🐕';
-      dog.style.top = random(5, 85) + 'vh';
-      const dur = random(10, 18);
-      dog.style.animationDuration = dur + 's';
-      dog.style.animationDelay = -random(0, dur) + 's';
-      body.appendChild(dog);
-    }
+
+    // Button click animation + redirect
+    button.addEventListener('click', e => {
+      e.preventDefault();
+      container.style.transform = 'scale(0.8)';
+      container.style.opacity = '0';
+      setTimeout(() => { window.location.href = TARGET_URL; }, 600);
+    });
   </script>
 </body>
 </html>
