feat: Add admin panel styles, image assets, and navigation logic
- Added `styles.css` with modern UI design including responsive layout, reveal animations, and button ripple effect.
- Added new image assets (dog illustrations and admin icons): dog1–dog4, map-icon, expense-icon, users-icon, reports-icon.
- Updated `index.html` hero section to replace emoji with dog images and improve structure.
- Simplified staff feature text and improved visual layout.
- Introduced `main.js` for basic navigation to Google Apps Script endpoints with placeholder EXEC URL.
- Included hover effects and animation delays for better UX.
- Ensured mobile responsiveness via media queries.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
 
-  <!-- HERO -->
+  <!-- HERO: собаки -->
   <header class="hero">
-    <h1 class="reveal">Sirko Club — Собачий адмін</h1>
-    <p class="reveal delay-1">Всі інструменти для персоналу та адміністраторів</p>
-    <div class="dog-tiles reveal delay-2">
-      <div class="dog-card">🐕‍🦺</div>
-      <div class="dog-card">🐩</div>
-      <div class="dog-card">🐕</div>
-      <div class="dog-card">🐶</div>
+    <h1>Sirko Club — Собачий адмін</h1>
+    <p>Всі інструменти для персоналу та адміністраторів</p>
+    <div class="dog-tiles">
+      <img src="images/dog1.jpg" alt="Кавалер-спанієль" class="dog-img reveal delay-1" />
+      <img src="images/dog2.jpg" alt="Далматинець" class="dog-img reveal delay-2" />
+      <img src="images/dog3.jpg" alt="Золотистий ретривер" class="dog-img reveal delay-3" />
+      <img src="images/dog4.jpg" alt="Лабрадор" class="dog-img reveal delay-4" />
     </div>
   </header>
 
@@ -35,7 +35,7 @@
     </div>
     <div class="feature reveal delay-2">
       <img src="images/users-icon.png" alt="Управління персоналом" />
-      <h3>Управління персоналом</h3>
+      <h3>Персонал</h3>
       <p>Додати, редагувати або видаляти співробітників.</p>
     </div>
     <div class="feature reveal delay-3">
